마이너수정6

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
 
 .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;position:relative}
-.header::before{content:'beta';position:absolute;left:4px;top:-6px;font-size:8px;font-weight:900;color:#fff;background:#7c3aed;padding:1px 4px;border-radius:3px;text-transform:uppercase;letter-spacing:0.5px;z-index:1}
+.header::before{content:'beta';position:absolute;left:0px;top:-6px;font-size:8px;font-weight:900;color:#fff;background:#7c3aed;padding:1px 4px;border-radius:3px;text-transform:uppercase;letter-spacing:0.5px;z-index:1}
 .top-btn{padding:8px 14px;border-radius:12px;font-size:12px;font-weight:700;border:0;cursor:pointer}
 .top-btn.primary{background:#7c3aed;color:#fff}
 
@@ -96,7 +96,7 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .picker-list::-webkit-scrollbar-thumb:hover{background:#a8a8a8}
 .picker-item{height:44px;line-height:44px;border-radius:12px;margin:6px 4px;text-align:center;background:#f6f6ff;color:#5b5b72;font-weight:700;cursor:pointer;user-select:none}
 .picker-item:hover,.picker-item.active{background:#7c3aed;color:#fff}
-.saved-btn{height:44px;padding:0 14px;border-radius:12px;background:#fff;color:#7c3aed;border:2px solid #e9defd;font-weight:800;cursor:pointer;white-space:nowrap;font-size:13px}
+.saved-btn{height:44px;padding:0 14px;border-radius:12px;background:#fff;color:#7c3aed;border:2px solid #e9defd;font-weight:800;cursor:pointer;white-space:nowrap;font-size:13px;flex:1}
 .saved-btn:hover{background:#f7f2ff}
 .saved-btn.selected{background:#7c3aed;color:#fff;border-color:#7c3aed}
 .picker-trigger.dim{background:#ede9fe;color:#6b21a8}
