--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <style>
 *{box-sizing:border-box}
-body{font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;max-width:720px;margin:0 auto;padding:16px 16px 280px 16px;background:#faf8ff;min-height:100vh;color:#111827}
+body{font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;max-width:720px;margin:0 auto;padding:16px;background:#faf8ff;min-height:100vh;color:#111827}
 h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
 
@@ -242,22 +242,18 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 
 /* Footer */
 #appFooter {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  max-width: 720px;
+  margin: 40px auto 0;
+  padding: 20px 0;
   background: #fff;
   border-top: 1px solid #e5e7eb;
-  padding: 20px 16px;
   box-shadow: 0 -2px 12px rgba(0,0,0,.04);
-  z-index: 100;
-  max-height: 240px;
-  overflow-y: auto;
 }
 
 .footer-content {
   max-width: 720px;
   margin: 0 auto;
+  padding: 0 16px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
@@ -293,7 +289,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   color: #6b7280;
   text-decoration: none;
   font-size: 11px;
-  font-weight: 600;
   transition: color 0.2s ease;
 }
 
@@ -316,7 +311,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 
 @media (max-width: 600px) {
   #appFooter {
-    padding: 16px;
+    margin: 30px 16px 0;
   }
   
   .footer-content {
