--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 </section>
 </div>
 
-<div id="quizView" class="newsletter-view" style="display: none;">
+<div id="quizView" class="newsletter-view" style="display: none; padding-top: 0;">
   <section class="card">
     <div class="quiz-content">
       <div class="quiz-header">
