--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 
 <link rel="stylesheet" href="css/sidebar.css">
 <link rel="stylesheet" href="css/quiz.css">
+<link rel="stylesheet" href="css/announcement.css">
 </head>
 <body>
 <header class="header">
@@ -495,6 +496,26 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   </section>
 </div>
 
+<!-- Quiz Announcement Popup -->
+<div id="announcementOverlay" class="announcement-overlay"></div>
+<div id="announcementPopup" class="announcement-popup">
+  <div class="announcement-content">
+    <div class="announcement-icon">🎉</div>
+    <h2 class="announcement-title">새로운 기능</h2>
+    <p class="announcement-message">
+      Quiz가 가능해요.<br>
+      지금 우측 메뉴 상단에서 확인하세요.
+    </p>
+    <div class="announcement-actions">
+      <button class="announcement-btn primary announcement-close">확인</button>
+      <label class="announcement-dismiss">
+        <input type="checkbox" id="announcementDontShow" style="margin-right: 4px;">
+        하루 동안 팝업 띄우지 않기
+      </label>
+    </div>
+  </div>
+</div>
+
 <div id="authModal" class="auth">
   <div class="auth-card">
     <button id="authClose" class="auth-close" aria-label="Close">×</button>
@@ -547,6 +568,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <script defer src="js/app.js?v=20251017"></script>
 <script defer src="js/sidebar.js"></script>
 <script defer src="js/quiz.js"></script>
+<script defer src="js/announcement.js"></script>
 
 <script>
 /* Sori Auth — final stable gate (popup→redirect, no alerts) */
