--- a/index.html
+++ b/index.html
@@ -501,16 +501,16 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <div id="announcementPopup" class="announcement-popup">
   <div class="announcement-content">
     <div class="announcement-icon">🎉</div>
-    <h2 class="announcement-title">새로운 기능</h2>
+    <h2 class="announcement-title">New Feature</h2>
     <p class="announcement-message">
-      Quiz가 가능해요.<br>
-      지금 우측 메뉴 상단에서 확인하세요.
+      Quiz is now available!<br>
+      Check it out in the top right menu.
     </p>
     <div class="announcement-actions">
-      <button class="announcement-btn primary announcement-close">확인</button>
+      <button class="announcement-btn primary announcement-close">Got it</button>
       <label class="announcement-dismiss">
         <input type="checkbox" id="announcementDontShow" style="margin-right: 4px;">
-        하루 동안 팝업 띄우지 않기
+        Don't show for 24 hours
       </label>
     </div>
   </div>
