--- a/index.html
+++ b/index.html
@@ -442,8 +442,13 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
           <h2 class="quiz-title">Daily Quiz</h2>
           <p class="quiz-description">Test your Korean knowledge</p>
         </div>
-        <div class="quiz-progress">
-          <p>Score: <span id="quizScore">0</span> / <span id="quizTotal">5</span></p>
+        <div class="quiz-stats">
+          <div class="quiz-streak">
+            🔥 <span id="quizStreak">0</span>
+          </div>
+          <div class="quiz-progress">
+            <p>Score: <span id="quizScore">0</span> / <span id="quizTotal">5</span></p>
+          </div>
         </div>
       </div>
       
