--- a/index.html
+++ b/index.html
@@ -467,6 +467,14 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
           <p class="quiz-korean">안녕하세요</p>
         </div>
         
+        <div class="quiz-actions-top">
+          <button id="quizFavoriteBtn" class="quiz-favorite-btn">
+            <span class="quiz-favorite-text">☆</span>
+            <span class="quiz-info-badge">?</span>
+            <span class="quiz-tooltip">Click to save for review in Saved</span>
+          </button>
+        </div>
+        
         <div class="quiz-speed-control">
           <label>Speed:</label>
           <input id="quizSpeed" type="range" min="0.6" max="1.0" step="0.05" value="0.80"/>
